package com.gilxyj.factorymethod;

public interface PizzaStore {
    Pizza createPizza(String type);
}
